reasignacion path carta a restaurante correspondiente

--- a/app/src/main/res/layout/activity_form_alergenos.xml
+++ b/app/src/main/res/layout/activity_form_alergenos.xml
@@ -63,13 +63,13 @@
             android:inputType="textPersonName">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/t_pNombre"
+                android:id="@+id/TexNomDepto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/btnGuardarAl"
+            android:id="@+id/btnGuardarDepto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center_vertical"
