--- a/app/src/main/res/layout/activity_form_restaurante.xml
+++ b/app/src/main/res/layout/activity_form_restaurante.xml
@@ -199,7 +199,7 @@
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnGuardarAl"
+                android:id="@+id/btnGuardarDepto"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -225,7 +225,7 @@
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_borrarDep"
+                android:id="@+id/btnBorrarDep"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
