--- a/app/src/main/res/layout/activity_list_usuarios.xml
+++ b/app/src/main/res/layout/activity_list_usuarios.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:text="Lista de alergenos"
+        android:text="Lista de personal"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
