--- a/app/src/main/res/layout/activity_form_ticket.xml
+++ b/app/src/main/res/layout/activity_form_ticket.xml
@@ -46,49 +46,48 @@
             android:id="@+id/tvNombreRest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/open_sans_bold"
             android:text="Nombre Restaurante"
             android:textColor="@color/black"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="@+id/backBtn" />
+            android:textSize="24sp"/>
 
         <TextView
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:id="@+id/tvNifRest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="130dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/open_sans_bold"
             android:text="B12345678"
             android:textColor="@color/black"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@+id/backBtn" />
+            android:textSize="20sp" />
 
         <TextView
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:id="@+id/tvFecha"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/open_sans_bold"
             android:text="Fecha"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@+id/backBtn" />
+            android:textSize="16sp" />
 
         <Spinner
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:id="@+id/spMesa"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            style="@android:style/Widget.Holo.Light.Spinner"
             android:fontFamily="@font/open_sans_bold"
             android:textColor="@color/black"
             android:textSize="16sp"/>
+
+        <!--android:background="@drawable/spinner_background"-->
 
         <ListView
             android:id="@+id/listaMesas"
