--- a/app/src/main/res/layout/activity_list_tickets.xml
+++ b/app/src/main/res/layout/activity_list_tickets.xml
@@ -7,7 +7,6 @@
     tools:context="com.example.Lists.ListTicket">
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -30,7 +29,7 @@
                 android:src="@drawable/ic_back"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/black" />
+                app:tint="@color/black"/>
 
             <TextView
                 android:id="@+id/textView"
@@ -59,7 +58,8 @@
             android:id="@+id/listTickets"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="30dp"
+            >
 
         </ListView>
 
