--- a/app/src/main/res/layout/item_linea_ticket.xml
+++ b/app/src/main/res/layout/item_linea_ticket.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginEnd="5dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,6 +25,7 @@
             android:layout_marginTop="15dp"
             android:layout_weight="1"
             android:textSize="22dp"
+            android:textColor="@color/black"
             android:text="Producto" />
 
 
@@ -37,19 +39,13 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_weight="0">
 
-        <Button
+        <ImageButton
         android:id="@+id/menos"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="15dp"
+        android:backgroundTint="@color/purple_700"
         android:background="@drawable/ic_menos"/>
-
-    <!-- TODO esto es para cambiar el menos actual por un icono.
-    Da problemas de tamaño.
-
-    android:background="@drawable/ic_menos"
-
-    -->
 
         <TextView
         android:id="@+id/tvAmount"
@@ -58,23 +54,27 @@
         android:layout_weight="0.6"
         android:layout_marginTop="15dp"
         android:textSize="22dp"
+        android:textColor="@color/black"
         android:text="0"
         android:textAlignment="center" />
 
-        <Button
+        <ImageButton
         android:id="@+id/mas"
         android:layout_width="30dp"
         android:layout_marginTop="15dp"
         android:layout_height="30dp"
+        android:backgroundTint="@color/purple_700"
         android:background="@drawable/ic_mas"/>
 
-        <Button
-            android:id="@+id/borrar"
-            android:layout_width="30dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="10dp"
-            android:layout_height="30dp"
-            android:background="@drawable/ic_baseline_delete"/>
+        <ImageButton
+        android:id="@+id/borrar"
+        android:layout_width="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="10dp"
+        android:layout_height="30dp"
+        android:backgroundTint="@color/red"
+        android:background="@drawable/ic_baseline_delete"
+        />
 
         </LinearLayout>
 
