--- a/app/src/main/res/layout/item_ticket.xml
+++ b/app/src/main/res/layout/item_ticket.xml
@@ -8,8 +8,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_weight="1"
         android:text="TextView"
-        android:textSize="20dp" />
+        android:textColor="@color/black"
+        android:textSize="22dp" />
 
 </LinearLayout>
