--- a/app/src/main/res/layout/item_check.xml
+++ b/app/src/main/res/layout/item_check.xml
@@ -9,6 +9,8 @@
         android:id="@+id/check1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CheckBox" />
+        android:text="CheckBox"
+        android:textColor="@color/black"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
