--- a/app/src/main/res/layout/item_usuario.xml
+++ b/app/src/main/res/layout/item_usuario.xml
@@ -10,6 +10,7 @@
         android:layout_marginTop="5dp"
         android:layout_weight="1"
         android:text="TextView"
+        android:textColor="@color/black"
         android:textSize="20dp" />
 
 </LinearLayout>
