--- a/app/src/main/res/layout/item_restaurante.xml
+++ b/app/src/main/res/layout/item_restaurante.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/txDescrip"
+        android:id="@+id/itemDescrip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
