--- a/app/src/main/res/drawable/gradient1.xml
+++ b/app/src/main/res/drawable/gradient1.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="90"
-        android:endColor="@color/material_dynamic_neutral60"
-        android:startColor="@color/black" />
-    <corners android:radius="45dp"></corners>
+        android:angle="5"
+        android:endColor="#2196F3"
+        android:startColor="@color/material_dynamic_neutral60" />
+    <corners android:radius="15dp"></corners>
 </shape>
