--- a/app/src/main/res/layout/activity_form_departamento.xml
+++ b/app/src/main/res/layout/activity_form_departamento.xml
@@ -147,7 +147,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        app:layout_constraintBottom_toTopOf="@id/btnNuevoProducto"
+        android:layout_marginBottom="60dp"
+        android:background="@drawable/gradient1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
         app:layout_constraintVertical_bias="0.0">
 
