--- a/app/src/main/res/layout/item_alergeno.xml
+++ b/app/src/main/res/layout/item_alergeno.xml
@@ -11,6 +11,6 @@
         android:layout_weight="1"
         android:text="TextView"
         android:textColor="@color/black"
-        android:textSize="20dp" />
+        android:textSize="24sp" />
 
 </LinearLayout>
