--- a/app/src/main/res/layout/activity_list_usuarios.xml
+++ b/app/src/main/res/layout/activity_list_usuarios.xml
@@ -47,8 +47,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_listaNuevo"
         app:layout_constraintTop_toBottomOf="@+id/linear"
-        app:layout_constraintBottom_toTopOf="@+id/btn_listaNuevo">
+        app:layout_constraintVertical_bias="0.0">
 
     </ListView>
 
