--- a/app/src/main/res/layout/activity_form_admin.xml
+++ b/app/src/main/res/layout/activity_form_admin.xml
@@ -78,6 +78,12 @@
             android:layout_height="wrap_content"
             android:text="GESTION DE PERSONAL" />
 
+        <Button
+            android:id="@+id/btnTicket"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="VER TICKETS" />
+
 
         <Button
             android:id="@+id/logOutBtn"
